 - Removed the Letter of Recommendation and everything related to Jack in Greenfield. You now head straight to the Mayor's office after entering town.
 - Removed the Telluria Map Fragment. The Map of Telluria can now be purchased immediately from the general store after defeating Laeryidyean.

Changes:
 - Recapped the max level from level 20 to level 30.
 - A huge amount of unnecessary, repetitive, and downright boring dialogue has been culled from the game. Most cutscenes have been made much shorter, and many have even been removed entirely.
 - Many cutscenes and important events have been restructured to make gameplay feel smoother.
 - Replaced Player 2's 2nd magic equip slot with an offhand slot (light shields).
 - Resprited all existing icons from 24px to 32px. Changed many icons of existing items.
 - Overhauled the equip comparison menu.
 - The pub/tavern has been rebranded as The Tipsy Oyster! Barkeep's name has been revealed to be Jeremy, and all of his establishments have been redesigned (except for the original in Haven Harbor).
 - Fleshed out the salvaging system, making many items throughout the game now salvageable.
 - Leveling up will also remove all debuffs.
 - Fire attacks no longer remove water states.
 - Many shop stocks and enemy drop pools have been modified.
 - Increased all ore mining drop ranges by 1 on both bounds (e.g. copper ore now drops 3-5 copper clusters instead of the old 2-4).
 - Being defeated by a Lost Soul in the Great Pyramid will now send you back to the start of the dungeon instead of giving a game over.
 - Many food-related items have been made renewable, and as a result are no longer sold by Dalia.
 - The new Speedster Boots have replaced the spot in boot progression once held by the Hermes Boots. The Hermes Boots have been moved up to be crafted near the end of Telluria Field's progression.
 - Solus Town now automatically becomes snowy during the holiday season.