@@ -343,6 +343,7 @@ Removals:
 
 Changes:
  - Recapped the max level from level 20 to level 30.
+ - Random encounters are now blocked in a 6-tile radius around any visible enemy encounter.
  - A huge amount of unnecessary, repetitive, and downright boring dialogue has been culled from the game. Most cutscenes have been made much shorter, and many have even been removed entirely.
  - Many cutscenes and important events have been restructured to make gameplay feel smoother.
  - Replaced Player 2's 2nd magic equip slot with an offhand slot (light shields).
